<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
	android:orientation="vertical"
    tools:context=".SelectTeamActivity" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_team_into" />
    
    <Button android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/team_ussr"
        	android:onClick="startUSSR"/>
    
    <Button android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/team_usa"
        	android:onClick="startUSA"/>

</LinearLayout>
