<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".NodeThreeChoice"
    android:orientation="vertical" >

    <TextView android:id="@+id/three_choice_story"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nodeThreeFiveQuestion" />
    
    <Button android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/nodeThreeFiveYes"
        	android:onClick="clickedYes"/>
    
    <Button android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/nodeThreeFiveNo"
        	android:onClick="clickedNo"/>   	

</LinearLayout>
